@@ -48,11 +48,28 @@ Now we create an issue::
     >>> 'Changes saved.' in browser.contents
     True
 
-Now we can add a response::
+If we just click the submit button without filling in text, an error
+occurs::
+
+    >>> browser.getControl('Submit').click()
+    >>> "No response text added and no issue changes made." in browser.contents
+    True
+
+Leaving the text empty but changing a value is fine::
+
+    >>> '<td>Important</td>' in browser.contents
+    False
+    >>> browser.getControl(name='severity').value = ('Important',)
+    >>> browser.getControl('Submit').click()
+    >>> '<td>Important</td>' in browser.contents
+    True
+    >>> "No response text added and no issue changes made." in browser.contents
+    False
+
+Now we can add a bigger response::
 
     >>> browser.getControl(name='response').value = 'Possibly fixed in r99.'
     >>> browser.getControl(name='transition').value = ('accept-unconfirmed',)
-    >>> browser.getControl(name='severity').value = ('Important',)
     >>> browser.getControl(name='responsibleManager').value = ('test_user_1_',)
     >>> browser.getControl('Submit').click()
 
@@ -72,9 +89,9 @@ This response was a clarification from the original poster::
     >>> 'class="response-clarification"' in browser.contents
     True
 
-We can edit this response::
+We can edit this second response::
 
-    >>> browser.getControl('Edit', index=1).click()
+    >>> browser.getControl('Edit', index=2).click()
     >>> browser.url
     'http://nohost/plone/issues/1/@@poi_response_edit'
     >>> 'Edit response' in browser.contents
@@ -98,7 +115,8 @@ We change the text and save it::
 
 Now we delete the response::
 
-    >>> browser.getControl('Delete').click()
+    >>> open('/tmp/test.html', 'w').write(browser.contents)
+    >>> browser.getControl('Delete', index=1).click()
     >>> browser.url
     'http://nohost/plone/issues/1'
     >>> 'Removed response' in browser.contents
